tools/argocd/deploy/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: example-argocd-server
  namespace: testargo
spec:
  host: example-argocd-server-testargo.apps.ocp4.datr.eu
  to:
    kind: Service
    name: example-argocd-server
    weight: 100
  port:
    targetPort: https
   tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect   
  wildcardPolicy: None
